[package]
name = "delimited-protobuf"
version = "0.1.1"
edition = "2021"

description = "A read/write library for length-delimited protobuf messages."
license = "Apache-2.0"
repository = "https://github.com/soulmachine/delimited-protobuf-rs"
keywords = ["delimited", "protobuf", "serialization", "deserialization"]

[dependencies]
protobuf = "3.2.0"
simple-error = "0.2.3"
